; ModuleID = '/home/carl/AnghaBench/git/extr_decorate.c_add_decoration.c'
source_filename = "/home/carl/AnghaBench/git/extr_decorate.c_add_decoration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoration = type { i32, i32 }
%struct.object = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @add_decoration(%struct.decoration* %0, %struct.object* %1, i8* %2) #0 {
  %4 = alloca %struct.decoration*, align 8
  %5 = alloca %struct.object*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.decoration* %0, %struct.decoration** %4, align 8
  store %struct.object* %1, %struct.object** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.decoration*, %struct.decoration** %4, align 8
  %9 = getelementptr inbounds %struct.decoration, %struct.decoration* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.decoration*, %struct.decoration** %4, align 8
  %14 = getelementptr inbounds %struct.decoration, %struct.decoration* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = mul nsw i32 %15, 2
  %17 = sdiv i32 %16, 3
  %18 = icmp sgt i32 %12, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load %struct.decoration*, %struct.decoration** %4, align 8
  %21 = call i32 @grow_decoration(%struct.decoration* %20)
  br label %22

22:                                               ; preds = %19, %3
  %23 = load %struct.decoration*, %struct.decoration** %4, align 8
  %24 = load %struct.object*, %struct.object** %5, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = call i8* @insert_decoration(%struct.decoration* %23, %struct.object* %24, i8* %25)
  ret i8* %26
}

declare dso_local i32 @grow_decoration(%struct.decoration*) #1

declare dso_local i8* @insert_decoration(%struct.decoration*, %struct.object*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
